--- a/newtab.html
+++ b/newtab.html
@@ -59,18 +59,24 @@ html, body {
 	horizontal-align: right;
 }
 </style>
-<script src="bgimage.js"></script>
+<script src="content.js"></script>
 </head>
  
 <body>
 	<div class="back">
 		<div class="ment">
 			<p id="clock" class="arrange"></p>
-			<p><button id="request" type="button">request</button></p>
+			<p><button id="request">request</button></p>
 		</div>
 		<div class="geo">
 			<p id="out" class="place"></p>
 		</div>
 	</div>
+	<audio id="myAudio">HTML5 audio not supported</audio>
+	<button id="playAudio">Play</button>
+	<button id="rewindAudio">Rewind</button>
+	<button id="forwardAudio">Fast forward</button>
+	<button id="restartAudio">Restart</button>
+
 </body>
 </html>
